# yona-privacy-app

./: .gitignore  README.md
circuits/: README.md  build.sh
docs-mintify/: README.md  docs.json  index.mdx  quickstart.mdx
docs-mintify/concepts/: fees.mdx  how-it-works.mdx  indexer.mdx  privacy.mdx  relayer.mdx  technical.mdx
docs-mintify/features/: bridge.mdx  deposit.mdx  swap.mdx  withdraw.mdx
frontend/: example.env  index.html  package.json  tsconfig.json  vite.config.ts
frontend/public/: transaction2.wasm
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: Button.tsx  Header.tsx  NavLink.tsx  ReferralModal.tsx  TokenBridgeSelectModal.tsx  TokenSelectModal.tsx
frontend/src/lib/: storage.ts  wallet-storage.ts
frontend/src/pages/: Bridge.tsx  Portfolio.tsx  Shield.tsx  Swap.tsx  Unshield.tsx
indexer/: .gitignore  README.md  docker-compose.yml  example.env  package.json  start.sh
indexer/src/: config.ts  database.ts  event-decoder.ts  event-listener.ts  index.ts  job-queue.ts  merkle-tree.ts  relayer.ts  server.ts  zkcash.json
indexer/src/entities/: CommitmentEvent.ts  Deposit.ts  (+2 more)
program/: Anchor.toml  Cargo.toml  README.md  alt-address.json  ata-addresses.json  package.json  program.json  tsconfig.json
program/idls/: jupiter_aggregator.json
program/jup/: route.ts
program/programs/zert/: Cargo.toml
program/programs/zert/src/: errors.rs  groth16.rs  lib.rs  state.rs  types.rs  utils.rs
program/programs/zert/src/instructions/: deposit.rs  initialize.rs  mod.rs  swap.rs  update_deposit_limit.rs  update_global_config.rs  withdraw.rs
program/scripts/: OVERVIEW.md  README.md  add-alt.ts  create-alt.ts  create-mints.ts  init-ata.ts  init.ts  mint-to.ts  status.ts
program/tests/: bankrun.ts  instructions.ts  jup.ts  localnet.ts  swap_with_jup_example.ts  zkcash.ts
program/tests/lib/: constants.ts  derive.ts  math.ts  prover.ts  test_alt.ts  token.ts  types.ts  utils.ts  utxo.ts
(+78 files in other folders)
